# model-quantization-aggregation

./: .gitattributes  CITATION.cff  LICENSE  README.md  dot-env-template  figures.mplstyle  pyproject.toml  requirements.txt
data/interim/: deepseek-V3-test.json  gemini-1b1-discrepancies.xlsx  gemini-2-0-flash-results.parquet  gemini-2.0-flash-exp-1-by-1-test.json  gemini-2.0-flash-exp-full-test.json  gemini-2.0-flash-exp-scores.parquet  gemini-discrepancies.xlsx  model-quantization-papers-50-sample.xlsx  model-quantization-papers.csv  model-quantization-selected-papers.xlsx  venue-rating.csv
data/processed/: README.md  evidence-diagrams-mapping.md  metadata-template.json  model-quantization-final-selection.csv  systematic-studies-quality-evaluation.md
data/processed/alizadehLanguageModelsSoftware2025/: effects.json  improvement_metrics.parquet  improvement_statistics.parquet  improvement_statistics_by_precision.parquet  metadata.json  systematic-studies-quality-evaluation.md
data/processed/geensEnergyCostModelling2024/: effects.json  improvement_metrics.parquet  improvement_statistics.parquet  improvement_statistics_by_precision.parquet  metadata.json
data/raw/: scopus-model-quantization.csv
notebooks/: .gitignore  1.0-llm-promt-refinement.ipynb  2.0-model-quantization-paper-selection.ipynb  3.0-final-selection-analysis.ipynb  4.0-paper-metadata-analysis.ipynb  5.0-evidence-analysis.ipynb
src/: config.py  effect_intensity.py  run_evidence_extraction.py
src/data/: download.py  utils.py
src/data/papers/: entities.py  utils.py  (+1 more)
src/forestplot/: utils.py
(+26 files in other folders)
